# sisu2025

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  DEPLOY_COOLIFY.sh  DEPLOY_HOSTINGER_COMPLETE.md  Dockerfile  Dockerfile.backend  FRONTEND_AUDIT.md  Makefile  README.md  ULTRA_SCRAPER.py  coolify-config.json  coolify-config.yaml  coolify-docker-compose.yml  coolify.json  crawler_meusisu.py  deploy-vps.sh  diagnose_api.py  docker-compose.prod.yml  docker-compose.yml  instagram-overview.html  investigate_meusisu.sh  main.py  mega_scraper.py  pyproject.toml  realtime_monitor.py  requirements.txt  test_api_advanced.py  traefik-xtrisisu.yml
.playwright-mcp/: getCourseData
config/: courses.json  notifications.json  settings.json
deploy/: .env.coolify  .env.example  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
directives/: debug_data_issues.md  deploy_to_production.md  sync_cut_scores.md
execution/: auto_sync.py  monitor_scores.py  night_watch.py  quick_sync.py  sync_cut_scores.py
scripts/: analyze_history.py  audit_cotas.py  backfill_data.py  check_2026.py  check_completeness.py  check_coverage.py  check_coverage_years.py  check_data.py  check_data_broad.py  check_partial.py  check_rn.py  convert_states_to_siglas.py  debug_course_37.py  debug_protobuf_structure.py  debug_radar_data.ts  debug_rn.py  debug_ufma.py  decode_file.py  fetch_all_courses.py  fetch_missing_states.py  fix_ro.py  fix_ufrn_weights.py  force_sync_targets.py  force_sync_uern.py  full_data_sync.py  import_all_courses.py  import_all_states.py  map_states.py  (+18 more)
(+109 files in other folders)
